--- a/index.html
+++ b/index.html
@@ -13,16 +13,52 @@
 </head>
 
 <body>
+  <main class="conteiner flex justify">
+    <div class="card flex flex-wrap">
+      <!-- card content -->
+      <div class="card__content">
+        <div class="card__content_header">
+          <h1>Get <span class="text-violet">insights</span> that help your business grow.</h1>
+        </div>
 
-  Get insights that help your business grow.
+        <div class="card__content_description">
+          <p>Discover the benefits of data analytics and make better decisions regarding revenue, customer
+            experience, and overall efficiency.</p>
+        </div>
 
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer
-  experience, and overall efficiency.
+        <div class="card__content_egg flex egg-justify">
+          <div class="egg_item">
+            <h3>10k+</h3>
+            <p>companies</p>
+          </div>
+          <div class="egg_item">
+            <h3>314</h3>
+            <p>templates</p>
+          </div>
+          <div class="egg_item">
+            <h3>12m+</h3>
+            <p>queries</p>
+          </div>
+        </div>
 
-  10k+ companies
-  314 templates
-  12m+ queries
 
+
+      </div>
+
+      <!-- card picture -->
+      <div class="card__picture">
+        <picture>
+          <source media="(min-width: 768px)" srcset="images/image-header-desktop.jpg">
+          <source media="(min-width: 0px)" srcset="images/image-header-mobile.jpg">
+          <img src="images/image-header-desktop.jpg" alt="product image">
+        </picture>
+      </div>
+    </div>
+  </main>
+
+
+
+  <!-- footer attribution -->
   <footer></footer>
   <script src="resourse/fem-footer.js"></script>
 </body>
